unpackaged/main/default/objects/Lead/fields/Agency_Type__c.field-meta.xml
<CustomField>
    <fullName>Agency_Type__c</fullName>
    <label>Agency Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agency_Type</valueSetName>
    </valueSet>
</CustomField>