unpackaged/main/default/objects/Lead/fields/Customer_Sector__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sector__c</fullName>
    <label>Customer Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Customer_Sector</valueSetName>
    </valueSet>
</CustomField>