unpackaged/main/default/objects/Lead/fields/Is_MQL__c.field-meta.xml
<CustomField>
    <fullName>Is_MQL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is MQL</label>
    <type>Checkbox</type>
</CustomField>