unpackaged/main/default/objects/Lead/fields/Latest_MQL_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_MQL_Date__c</fullName>
    <label>Latest MQL Date</label>
    <type>Date</type>
</CustomField>