unpackaged/main/default/objects/Lead/fields/MQL_Count__c.field-meta.xml
<CustomField>
    <fullName>MQL_Count__c</fullName>
    <label>MQL Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>