unpackaged/main/default/objects/Lead/fields/Original_Source__c.field-meta.xml
<CustomField>
    <fullName>Original_Source__c</fullName>
    <label>Original Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Original_Source</valueSetName>
    </valueSet>
</CustomField>