unpackaged/main/default/objects/Lead/fields/Re_engagement_Date__c.field-meta.xml
<CustomField>
    <fullName>Re_engagement_Date__c</fullName>
    <label>Re-engagement Date</label>
    <type>Date</type>
</CustomField>