unpackaged/main/default/objects/Lead/fields/Rejected_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Reason_Details__c</fullName>
    <inlineHelpText>Enter additional details for rejecting the lead</inlineHelpText>
    <label>Rejected Reason Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>