unpackaged/main/default/objects/Lead/fields/Sales_Indicated_Units__c.field-meta.xml
<CustomField>
    <fullName>Sales_Indicated_Units__c</fullName>
    <label>Indicated Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>