unpackaged/main/default/objects/Lead/fields/SQL__c.field-meta.xml
<CustomField>
    <fullName>SQL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sales Qualified Lead</description>
    <label>SQL</label>
    <type>Checkbox</type>
</CustomField>