unpackaged/main/default/objects/Lead/validationRules/Capture_Reengagement_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Capture_Reengagement_Date</fullName>
    <active>true</active>
    <description>Reengagement Date is required when Rejected Reason is Timing,Budget/Cost or No Response.</description>
    <errorConditionFormula>AND(
OR(
ISPICKVAL( Rejected_Reason__c ,&quot;Timing&quot; ), 
ISPICKVAL( Rejected_Reason__c ,&quot;Budget/Cost&quot; ) , 
ISPICKVAL( Rejected_Reason__c ,&quot;No Response&quot; )),
ISBLANK(Re_engagement_Date__c))</errorConditionFormula>
    <errorDisplayField>Re_engagement_Date__c</errorDisplayField>
    <errorMessage>Please populate the Re-engagement date.</errorMessage>
</ValidationRule>