unpackaged/main/default/objects/Lead/validationRules/Ensure_Email_and_Phone_on_Conversion.validationRule-meta.xml
<ValidationRule>
    <fullName>Ensure_Email_and_Phone_on_Conversion</fullName>
    <active>true</active>
    <description>Leads require an Email Address OR Phone Number before they can be Converted</description>
    <errorConditionFormula>AND(
 ISPICKVAL( Status , &#39;Converted&#39;),
OR(
 ISBLANK( Email ),
 ISBLANK(  Phone  )))</errorConditionFormula>
    <errorMessage>Please populate email and phone before the lead conversion</errorMessage>
</ValidationRule>