unpackaged/main/default/objects/Lead/validationRules/Ensure_Qualification_Details.validationRule-meta.xml
<ValidationRule>
    <fullName>Ensure_Qualification_Details</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(Status, &#39;Converted&#39;)
&amp;&amp;(OR (
ISBLANK( Pain_Points__c), 
ISBLANK (Portfolio_Types__c), 
ISBLANK(Sales_Indicated_Units__c), 
ISBLANK(TEXT(Business_Type__c)), 
(Budget_Confirmed__c=FALSE), 
ISBLANK(Urgency_Clarification__c )))</errorConditionFormula>
    <errorMessage>Please enter all qualifying info: Pain Points, Business Type, Portfolio Types, Sales Indicated Units, Budget Confirmed and Urgency Clarification</errorMessage>
</ValidationRule>