unpackaged/main/default/objects/Lead/validationRules/Ensure_Rejected_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Ensure_Rejected_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status, &#39;Disqualified&#39;),
  ISBLANK(TEXT( Rejected_Reason__c )) 
)</errorConditionFormula>
    <errorMessage>Please populate the &#39;Rejected Reason&#39; field&#39;</errorMessage>
</ValidationRule>