unpackaged/main/default/objects/Lead/listViews/Open_Leads_with_Related_Account.listView-meta.xml
<ListView>
    <fullName>Open_Leads_with_Related_Account</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Converted</value>
    </filters>
    <filters>
        <field>Account__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Open Leads with Related Account</label>
</ListView>