unpackaged/main/default/objects/Lead/listViews/SDR_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>SDR_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>SDR Queue</label>
    <queue>SDR_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>